[Native] Added React-Native, now we can run Bitnation in ours mobiles :) A few issues I've found:  * Some libraries were incompatible among them, and adding one or other made one thing or other brake    ex: https://stackoverflow.com/questions/44489330/undefined-is-not-an-objectecaluating-reactinternals-reactcurrentowner    and https://stackoverflow.com/questions/40911760/jest-fails-with-error-cannot-find-module-react-lib-reactcomponenttreehook
   Also I needed a workaround for a error regarding missing AnimationFrame for testing: https://stackoverflow.com/questions/43604058/requestanimationframe-polyfill-error-in-jest-tests#43950142

 * Probably we will need to remove the web app tests, migrating the tests for the native one (for now)
 * I've changed a bit the scripts commands to allow both web and native run along:
   web: start, build, test, eject
   native: start-native, ios, android, test-native, eject-native

 * I'm using Expo, it is very easy to setup a test.
   Run: `npm run start-native`
   It'll print a QR Code, you can scan it using the Expo app for your device
   Or you can on the emulator

 PS: I haven't tested on Android, as I only own an Iphone (5S)

--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "pangea",
   "version": "0.1.0",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "expo": "^19.0.1",
+    "react": "^16.0.0-alpha.12",
+    "react-dom": "^16.0.0-alpha.12",
+    "react-native": "0.46.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
+    "react-test-renderer": "^16.0.0-alpha.12",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-native": "react-native-scripts start",
+    "ios": "react-native-scripts ios",
+    "android": "react-native-scripts android",
+    "test-native": "node node_modules/jest/bin/jest.js --watch",
+    "eject-native": "react-native-scripts eject"
   },
   "devDependencies": {
+    "jest": "^20.0.4",
+    "react-native-scripts": "^1.1.0",
     "redux-mock-store": "^1.2.3"
   }
 }
