--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "eject-native": "react-native-scripts eject"
   },
   "devDependencies": {
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.2.1",
     "jest": "^20.0.4",
     "react-native-scripts": "^1.1.0",
     "redux-mock-store": "^1.2.3"
