[info] Added meta-data for the app

--- a/app.json
+++ b/app.json
@@ -3,6 +3,6 @@
         "name": "Bitnation",
         "slug": "bitnation",
         "sdkVersion": "19.0.0",
-        "version": "0.0.1",
+        "version": "0.0.1"
     }
 }
