--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.0.0-alpha.12",
     "react-dom": "^16.0.0-alpha.12",
     "react-native": "0.46.1",
+    "react-native-drawer": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
     "react-test-renderer": "^16.0.0-alpha.12",
@@ -42,7 +43,7 @@
     "presets": [
       "react-native"
     ]
-  },  
+  },
   "jest": {
     "transform": {
       ".*": "<rootDir>/node_modules/babel-jest"
