--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
     "jest": "^20.0.4",
+    "jest-expo": "^20.0.0",
     "react-native-mock": "^0.3.1",
     "react-native-scripts": "^1.1.0",
     "redux-mock-store": "^1.2.3"
@@ -45,12 +46,13 @@
     ]
   },
   "jest": {
-    "transform": {
-      ".*": "<rootDir>/node_modules/babel-jest"
-    },
     "unmockedModulePathPatterns": [
-      "node_modules"
+      "node_modules",
+      "@expo"
     ],
-    "preset": "react-native"
+    "transformIgnorePatterns": [
+      "/!node_modules\\/\\@expo"
+    ],
+    "preset": "jest-expo"
   }
 }
