--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,11 @@
     "extends": "airbnb",
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]        
+    },
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true,
+      "jest": true
     }
 }
