--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.0.0-alpha.12",
     "react-dom": "^16.0.0-alpha.12",
-    "react-native": "0.46.1",
+    "react-native": "0.46.4",
     "react-native-drawer": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.11",
@@ -17,14 +17,17 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-scripts start",
+    "android": "react-native-scripts android",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start-native": "react-native-scripts start",
+    "eject-native": "react-native-scripts eject",
     "ios": "react-native-scripts ios",
-    "android": "react-native-scripts android",
+    "lint": "node node_modules/eslint/bin/eslint.js --ext .js src/ --cache",
+    "start": "react-scripts start",
+    "start-native": "react-native-scripts start",
     "test": "node node_modules/jest/bin/jest.js",
-    "eject-native": "react-native-scripts eject"
+    "test-watch": "node node_modules/jest/bin/jest.js --no-cache --watch",
+    "test-coverage": "node node_modules/jest/bin/jest.js --coverage"
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
@@ -38,7 +41,8 @@
     "jest-expo": "^20.0.0",
     "react-native-mock": "^0.3.1",
     "react-native-scripts": "^1.1.0",
-    "redux-mock-store": "^1.2.3"
+    "redux-mock-store": "^1.2.3",
+    "sinon": "^4.0.1"
   },
   "babel": {
     "presets": [
@@ -47,16 +51,22 @@
   },
   "jest": {
     "bail": true,
-    "collectCoverage": true,
-    "collectCoverageFrom" : ["src/**/*.{js}", "App.js"],
-    "unmockedModulePathPatterns": [
-      "node_modules",
-      "@expo"
+    "collectCoverageFrom": [
+      "src/**/*.{js}",
+      "App.js"
     ],
+    "setupFiles": [
+      "<rootDir>/src/_tests_/setup-before-after.js"
+    ],
+    "testRegex": "src/_tests_/.*\\.test\\.js",
     "transformIgnorePatterns": [
       "/!node_modules\\/\\@expo"
     ],
     "preset": "jest-expo",
+    "unmockedModulePathPatterns": [
+      "node_modules",
+      "@expo"
+    ],
     "verbose": true
   }
 }
