--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "android": "react-native-scripts android",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_ENV='production' react-scripts build",
     "eject": "react-scripts eject",
     "eject-native": "react-native-scripts eject",
     "ios": "react-native-scripts ios",
     "lint": "node node_modules/eslint/bin/eslint.js --ext .js src/ --cache",
-    "start": "react-scripts start",
+    "start": "cross-env NODE_ENV='development' react-scripts start",
     "start-native": "react-native-scripts start",
-    "test": "node node_modules/jest/bin/jest.js",
-    "test-watch": "node node_modules/jest/bin/jest.js --no-cache --watch",
-    "test-coverage": "node node_modules/jest/bin/jest.js --coverage"
+    "test": "cross-env NODE_ENV='testing' node node_modules/jest/bin/jest.js",
+    "test-watch": "cross-env NODE_ENV='testing' node node_modules/jest/bin/jest.js --no-cache --watch",
+    "test-coverage": "cross-env NODE_ENV='testing' node node_modules/jest/bin/jest.js --coverage"
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
+    "cross-env": "^5.1.0",
     "enzyme": "^2.9.1",
     "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
@@ -41,6 +42,10 @@
     "jest-expo": "^20.0.0",
     "react-native-mock": "^0.3.1",
     "react-native-scripts": "^1.1.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
     "sinon": "^4.0.1"
   },
