Decide by process.env.REACT_APP_DEVTOOLS to show DevTools or not, controller in .evn files

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "android": "react-native-scripts android",
-    "build": "cross-env NODE_ENV='production' react-scripts build",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "eject-native": "react-native-scripts eject",
     "ios": "react-native-scripts ios",
     "lint": "node node_modules/eslint/bin/eslint.js --ext .js src/ --cache",
-    "start": "cross-env NODE_ENV='development' react-scripts start",
+    "start": "react-scripts start",
     "start-native": "react-native-scripts start",
     "test": "cross-env NODE_ENV='testing' node node_modules/jest/bin/jest.js",
     "test-watch": "cross-env NODE_ENV='testing' node node_modules/jest/bin/jest.js --no-cache --watch",
