Add missing tests Refactor using redux actions

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "jest": {
     "bail": true,
+    "testEnvironment": "jsdom",
     "collectCoverageFrom": [
       "src/**/*.{js}",
       "App.js"
