--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
     "react-native": "^0.48.4",
     "react-native-drawer": "^2.4.0",
     "react-redux": "^5.0.6",
-    "react-scripts": "^1.0.14",
-    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "android": "react-native-scripts android",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "build": "cross-env NODE_ENV='production' webpack --verbose --colors --display-error-details --config webpack.conf.js",
+    "build:serve": "cd dist/ && python -m SimpleHTTPServer",
     "eject:native": "react-native-scripts eject",
     "ios": "react-native-scripts ios",
     "lint": "eslint --ext .js src/ --cache",
-    "start": "react-scripts start",
+    "start": "cross-env NODE_ENV='development' babel-node ./server.js --development",
     "start:native": "react-native-scripts start",
     "test": "jest",
     "test:watch": "jest --no-cache --watch",
@@ -31,6 +29,24 @@
   },
   "devDependencies": {
     "babel-jest": "^21.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-typeof-symbol": "^6.23.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.18.0",
+    "cross-env": "^5.0.2",
+    "css-loader": "^0.28.4",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^4.9.0",
@@ -38,8 +54,21 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.0",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
     "jest-expo": "^22.0.0",
+    "node-sass": "^4.5.0",
+    "postcss": "^6.0.8",
+    "postcss-assets": "^4.2.0",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-reporter": "^5.0.0",
+    "postcss-url": "^7.1.2",
+    "react-hot-loader": "^3.0.0",
     "react-native-mock": "^0.3.1",
     "react-native-scripts": "^1.1.0",
     "react-test-renderer": "^16.0.0",
@@ -48,7 +77,15 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
-    "sinon": "^4.0.1"
+    "sass-loader": "^6.0.0",
+    "sinon": "^4.0.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^8.0.0",
+    "tslint-loader": "^3.5.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-obfuscator": "^0.11.2"
   },
   "babel": {
     "presets": [
