--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-native-drawer": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-scripts": "^1.0.14",
-    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
@@ -26,7 +25,7 @@
     "start": "react-scripts start",
     "start:native": "react-native-scripts start",
     "test": "jest",
-    "test:watch": "jest --no-cache --watch",
+    "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
@@ -68,7 +67,7 @@
     },
     "preset": "jest-expo",
     "setupFiles": [
-      "<rootDir>/src/_tests_/setup-before-after.js"
+      "<rootDir>/src/_tests_/setup/init.js"
     ],
     "testRegex": "src/_tests_/.*\\.test\\.js",
     "transformIgnorePatterns": [
