--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "react-redux": "^5.0.6",
     "react-scripts": "^1.0.14",
     "redux": "^3.7.2",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -21,7 +25,7 @@
     "eject": "react-scripts eject",
     "eject:native": "react-native-scripts eject",
     "ios": "react-native-scripts ios",
-    "lint": "eslint --ext .js src/ --cache",
+    "lint": "eslint --ext .js src/",
     "start": "react-scripts start",
     "start:native": "react-native-scripts start",
     "test": "jest",
@@ -42,10 +46,6 @@
     "react-native-mock": "^0.3.1",
     "react-native-scripts": "^1.1.0",
     "react-test-renderer": "^16.0.0",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0",
-    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
     "sinon": "^4.0.1"
   },
