--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "extends": "airbnb",
     "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]        
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]       ,
+      "import/no-unresolved": 0
     },
     "env": {
       "es6": true,
