--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.1.0",
     "expo": "^21.0.3",
+    "native-base": "^2.3.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
