--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 # production
 /build
 
+# any build folder in nested structure
+build/
+
 # misc
 .DS_Store
 .env.local
@@ -25,3 +28,5 @@ yarn-error.log*
 .idea/
 
 .eslintcache
+
+temp-ios-directory/
