--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "@expo/vector-icons": "^6.1.0",
+    "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-dom": "^16.0.0",
